[package]
name = "zenrc-rcl"
version = "0.1.0"
edition = "2024"

[[example]]
name = "publisher"
path = "examples/publisher.rs"

[[example]]
name = "subscriber"
path = "examples/subscriber.rs"

[dependencies]
phf = { version = "0.13", features = ["macros"] }
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

[build-dependencies]
bindgen = "0.72"
os_str_bytes ="7.1"
sha2 = "0.10"
regex = "1.12"
phf_codegen = "0.13"
rayon = "1.11"
syn = "2.0"
quote = "1.0"
prettyplease = "0.2"