[package]
name = "zenrc"
version = "0.1.0"
edition = "2024"

[features]
default = ["async"]
async = ["dep:tokio", "dep:futures-core"]

[dependencies]
zenrc-dds = { path = "../zenrc-dds" }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
futures-core = { workspace = true, optional = true }
